# rust-calc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.bat  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1  build.sh  create-cert.ps1  create_font_subset.py  sign.ps1
src/: app.rs  calculator.rs  icon.rs  main.rs
